--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -21,6 +21,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
@@ -42,11 +43,13 @@ jobs:
 
 
     steps:
+      - uses: actions/checkout@v3
+      
       - name: Get the latest tag
-      - id: get_version
+        id: get_version
         uses: battila7/get-version-action@v2
-      - run: echo ${{ steps.get_version.outputs.version-without-v }}
+        run: echo ${{ steps.get_version.outputs.version-without-v }}
 
       - name: Build the Docker image
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
         run: docker build . --file Dockerfile --tag joke-api:${{steps.get_version.outputs.version-without-v}}
