--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -44,12 +44,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Get the latest tag
         id: get_version
         uses: battila7/get-version-action@v2
+
+      - name: Echo version
         run: echo ${{ steps.get_version.outputs.version-without-v }}
 
       - name: Build the Docker image
-        uses: actions/checkout@v3
         run: docker build . --file Dockerfile --tag joke-api:${{steps.get_version.outputs.version-without-v}}
