--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -10,11 +10,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: ["16.14.0"]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     defaults:
       run:
         working-directory: ./api
@@ -22,11 +17,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 16
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
           cache: "npm"
+          cache-dependency-path: api/package-lock.json
+
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
