--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -12,7 +12,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./api
+        working-directory: api
 
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +22,6 @@ jobs:
         with:
           node-version: 16
           cache: "npm"
-          cache-dependency-path: api/package-lock.json
 
       - run: npm ci
       - run: npm run build --if-present
@@ -35,7 +34,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./api
+        working-directory: api
 
     steps:
       - uses: actions/checkout@v3
