--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -6,15 +6,16 @@ on:
   pull_request:
     branches: ["main"]
 
+env:
+  workdir: api
+
 jobs:
   test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: api
 
     steps:
       - uses: actions/checkout@v2
+      working-directory: ${{workdir}}
 
       - name: Use Node.js 16
         uses: actions/setup-node@v3
@@ -36,6 +37,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      working-directory: ${{workdir}}
+
+      - name: ls
+        run: ls -R
 
       - name: Get the latest tag
         id: get_version
