--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -12,10 +12,15 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: api
 
     steps:
       - uses: actions/checkout@v2
-      working-directory: ${{workdir}}
+
+      - name: ls
+        run: ls -R
 
       - name: Use Node.js 16
         uses: actions/setup-node@v3
@@ -37,10 +42,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      working-directory: ${{workdir}}
-
-      - name: ls
-        run: ls -R
 
       - name: Get the latest tag
         id: get_version
