--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -24,10 +24,10 @@ jobs:
         with:
           node-version: 16
 
-        run: ls
-        run: npm ci
-        run: npm run build --if-present
-        run: npm test
+      - run: ls
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
 
   build:
     needs: test
