--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -58,7 +58,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Echo version
-        run: echo ${{ ${{ github.ref }} }}
+        run: echo ${{ github.ref }}
 
       # - name: Build the Docker image
       #   working-directory: api
