--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -8,9 +8,12 @@ on:
 
 env:
   workdir: api
+  AZURE_WEBAPP_NAME: MY_WEBAPP_NAME # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: "api" # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: "16"
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -49,17 +52,31 @@ jobs:
       - name: Unit Tests
         run: pnpm test
 
-  build:
-    needs: test
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+          name: joke-app
+          path: .
 
+  deploy:
     runs-on: ubuntu-latest
+    needs: build
+
+    environment:
+      name: "production"
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: joke-app
 
-      - name: Echo version
-        run: echo ${{ github.ref }}
-
-      # - name: Build the Docker image
-      #   working-directory: api
-      #   run: docker build . --file Dockerfile --tag joke-api:${{steps.get_version.outputs.version-without-v}}
+      - name: "Deploy to Azure Web App"
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: "joke-app"
+          slot-name: "production"
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_350284e279874bcb865d8a539ddda65a }}
+          package: .
