--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Unit Tests
         run: pnpm test
 
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
@@ -71,6 +74,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: joke-app
+      
+      - name: unzip artifact for deployment
+        run: unzip release.zip 
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
