--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -52,14 +52,19 @@ jobs:
       - name: Unit Tests
         run: pnpm test
 
+      - name: Build app
+        run: pnpm build
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
+
+      
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: joke-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
