--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   workdir: api
-  AZURE_WEBAPP_NAME: MY_WEBAPP_NAME # set this to your application's name
+  AZURE_WEBAPP_NAME: joke-app' # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: "api" # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: "16"
 
@@ -64,7 +64,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: joke-app
+          name: node-app
           path: release.zip
 
   deploy:
@@ -79,7 +79,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: joke-app
+          name: node-app
       
       - name: unzip artifact for deployment
         run: unzip release.zip 
