--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
-      
+      - run: ls
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
