--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: release.zip
+          path: api/release.zip
 
   deploy:
     runs-on: ubuntu-latest
