--- a/.github/workflows/jokeapi-docker-image.yml
+++ b/.github/workflows/jokeapi-docker-image.yml
@@ -72,7 +72,7 @@ jobs:
     needs: build
 
     environment:
-      name: "production"
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -80,13 +80,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
-      
-      - name: unzip artifact for deployment
-        run: unzip release.zip 
 
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: unzip artifact for deployment
+        run: unzip release.zip
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
