--- a/.github/workflows/jokeapi-azure-webapp.yml
+++ b/.github/workflows/jokeapi-azure-webapp.yml
@@ -59,8 +59,6 @@ jobs:
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
-      - run: ls
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
@@ -82,7 +80,9 @@ jobs:
           name: node-app
 
       - name: unzip artifact for deployment
-        run: unzip release.zip
+        run: |
+          unzip release.zip
+          rm release.zip
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
