--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -69,6 +69,7 @@ jobs:
       - name: Set api version
         id: api-version
         run: |
+          node -e "console.log(require('./package.json').version);"
           VERSION=$(node -e "console.log(require('./package.json').version);")
           echo '::set-output name=API_VERSION::$VERSION'
 
