--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -71,7 +71,7 @@ jobs:
         run: |
           node -e "console.log(require('./package.json').version);"
           VERSION=$(node -e "console.log(require('./package.json').version);")
-          echo ""::set-output name=API_VERSION::$VERSION"
+          echo "::set-output name=API_VERSION::$VERSION"
 
       - run: echo ${{ steps.api-version.outputs.API_VERSION }}
 
