--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -93,15 +93,23 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: 'Get Previous tag'
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+
       - name: Build and push
         id: docker_build
+        if: steps.previoustag.outputs.tag != steps.api-version.outputs.API_VERSION
         uses: docker/build-push-action@v2
         with:
           context: ./${{ env.workdir }}/
           file: ./${{ env.workdir }}/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: mohammaddocker/joke-api:${{ steps.api-version.outputs.API_VERSION }}
+          tags: 
+            |
+            mohammaddocker/joke-api:${{ steps.api-version.outputs.API_VERSION }} 
+            mohammaddocker/joke-api:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 
