--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -95,19 +95,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: 'Get Previous tag'
-        id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"
-
       - name: Build and push
         id: docker_build
-        if: steps.previoustag.outputs.tag != steps.api-version.outputs.API_VERSION
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ./${{ env.workdir }}/
           file: ./${{ env.workdir }}/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: |
             mohammaddocker/joke-api:${{ steps.api-version.outputs.API_VERSION }} 
             mohammaddocker/joke-api:latest
