--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
     paths:
         - "api/**"
+        - ".github/workflows/docker-deploy.yml"
   pull_request:
     branches: ["main"]
   
@@ -106,6 +107,7 @@ jobs:
           file: ./${{ env.workdir }}/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: ${{ github.event_name != 'pull_request' }}
+          platform: linux/amd64,linux/arm64
           tags: |
             mohammaddocker/joke-api:${{ steps.api-version.outputs.API_VERSION }} 
             mohammaddocker/joke-api:latest
