--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   workdir: api
-  platforms: linux/amd64, linux/arm64/v8
+  platforms: "linux/amd64, linux/arm64/v8"
 
 jobs:
   build:
