--- a/.github/workflows/azure-vm-deploy.yml
+++ b/.github/workflows/azure-vm-deploy.yml
@@ -26,18 +26,14 @@ jobs:
         uses: dawidd6/action-ansible-playbook@v2
         with:
           # Required, playbook filepath
-          playbook: main.yml
+          playbook: docker/main.yml
           # Optional, directory where playbooks live
-          directory: ./ansible/docker
+          directory: ./ansible
           # Optional, SSH private key
           key: ${{secrets.AZURE_SSH_KEY}}
           # Optional, literal inventory file contents
-          inventory: |
-            [all]
-            ${{secrets.AZURE_VM_IP}}
-
-            [azure_vm:vars]
-            ansible_python_interpreter=/usr/bin/python3
+          options: |
+            --inventory .hosts
 
       - name: Update docker compose image
         uses: dawidd6/action-ansible-playbook@v2
@@ -48,10 +44,5 @@ jobs:
           directory: ./ansible
           # Optional, SSH private key
           key: ${{secrets.AZURE_SSH_KEY}}
-          # Optional, literal inventory file contents
-          inventory: |
-            [all]
-            ${{secrets.AZURE_VM_IP}}
-
-            [azure_vm:vars]
-            ansible_python_interpreter=/usr/bin/python3
+          options: |
+            --inventory .hosts
