--- a/ansible/docker/install-docker.yml
+++ b/ansible/docker/install-docker.yml
@@ -53,4 +53,4 @@
     force: yes
   when: >
     docker_compose_current_version == ""
-    or docker_compose_current_version is version(docker_compose_version, '<')
+    or docker_compose_current_version is version(docker_compose_version_int, '<')
