--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -6,6 +6,8 @@ on:
     paths:
         - "api/**"
         - ".github/workflows/docker-deploy.yml"
+    tags:        
+      - '*'  
   pull_request:
     branches: ["main"]
   
