--- a/ansible/docker/install-docker.yml
+++ b/ansible/docker/install-docker.yml
@@ -1,4 +1,10 @@
 ---
+- name: "Update Repository cache"
+  apt:
+    update_cache: true
+    cache_valid_time: 3600
+    force_apt_get: true
+
 - name: Install packages using apt
   apt:
     name: 
