--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -10,25 +10,25 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Create ACR
-      id: create-acr
-      run: |
-        az acr create -n mohammadcd -g mohammadcd81d0-rg --location "West Europe" --sku Standard --admin-enabled
-        echo "::set-output name=acr_username::`az acr credential show -n mohammadcd --query username | xargs`"
-        echo "::set-output name=acr_password::`az acr credential show -n mohammadcd --query passwords[0].value | xargs`"
-        echo "::add-mask::`az acr credential show -n mohammadcd --query passwords[0].value | xargs`"
+    # - name: Create ACR
+    #   id: create-acr
+    #   run: |
+    #     az acr create -n mohammadcd -g mohammadcd81d0-rg --location "West Europe" --sku Standard --admin-enabled
+    #     echo "::set-output name=acr_username::`az acr credential show -n mohammadcd --query username | xargs`"
+    #     echo "::set-output name=acr_password::`az acr credential show -n mohammadcd --query passwords[0].value | xargs`"
+    #     echo "::add-mask::`az acr credential show -n mohammadcd --query passwords[0].value | xargs`"
 
-    - uses: azure/docker-login@v1
-      with:
-        login-server: mohammadcd.azurecr.io
-        username: ${{ steps.create-acr.outputs.acr_username }}
-        password: ${{ steps.create-acr.outputs.acr_password }}
+    # - uses: azure/docker-login@v1
+    #   with:
+    #     login-server: mohammadcd.azurecr.io
+    #     username: ${{ steps.create-acr.outputs.acr_username }}
+    #     password: ${{ steps.create-acr.outputs.acr_password }}
 
-    - name: Build and push image to ACR
-      id: build-image
-      run: |
-        docker build "$GITHUB_WORKSPACE/api" -f  "api/Dockerfile" -t mohammadcd.azurecr.io/jokeapp:${{ github.sha }} --label dockerfile-path=api/Dockerfile
-        docker push mohammadcd.azurecr.io/jokeapp:${{ github.sha }}
+    # - name: Build and push image to ACR
+    #   id: build-image
+    #   run: |
+    #     docker build "$GITHUB_WORKSPACE/api" -f  "api/Dockerfile" -t mohammadcd.azurecr.io/jokeapp:${{ github.sha }} --label dockerfile-path=api/Dockerfile
+    #     docker push mohammadcd.azurecr.io/jokeapp:${{ github.sha }}
     
     - uses: azure/k8s-set-context@v1
       id: login
@@ -43,13 +43,13 @@ jobs:
             echo `kubectl create namespace joke-app86ff`
         fi
 
-    - uses: azure/k8s-create-secret@v1
-      with:
-        namespace: joke-app86ff
-        container-registry-url: mohammadcd.azurecr.io
-        container-registry-username: ${{ steps.create-acr.outputs.acr_username }}
-        container-registry-password: ${{ steps.create-acr.outputs.acr_password }}
-        secret-name: jokeappdockerauth
+    # - uses: azure/k8s-create-secret@v1
+    #   with:
+    #     namespace: joke-app86ff
+    #     container-registry-url: mohammadcd.azurecr.io
+    #     container-registry-username: ${{ steps.create-acr.outputs.acr_username }}
+    #     container-registry-password: ${{ steps.create-acr.outputs.acr_password }}
+    #     secret-name: jokeappdockerauth
        
     - uses: azure/k8s-deploy@v1.2
       with:
@@ -58,6 +58,6 @@ jobs:
           manifests/deployment.yml
           manifests/service.yml
         images: |
-          mohammadcd.azurecr.io/jokeapp:${{ github.sha }}
-        imagepullsecrets: |
-          jokeappdockerauth   
+          mohammaddocker/joke-api:latest
+        # imagepullsecrets: |
+        #   jokeappdockerauth   
