--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: "jokeapp-c62b"
           image: "mohammaddocker/joke-api:latest"
+          imagePullPolicy: Always
           env:
             - name: PORT
               value: "80"
