--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,19 +1,19 @@
 apiVersion : apps/v1
 kind: Deployment
 metadata:
-  name: "jokeapp-c62b"
+  name: "jokeapp"
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: "jokeapp-c62b"
+      app: "jokeapp"
   template:
     metadata:
       labels:
-        app: "jokeapp-c62b"
+        app: "jokeapp"
     spec:
       containers:
-        - name: "jokeapp-c62b"
+        - name: "jokeapp"
           image: "mohammaddocker/joke-api:latest"
           imagePullPolicy: Always
           env:
