--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: "jokeapp-c62b"
+    name: "jokeapp"
     labels:
-        app: "jokeapp-c62b"
+        app: "jokeapp"
 spec:
     type: LoadBalancer
     ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
     selector:
-        app: "jokeapp-c62b"
+        app: "jokeapp"
