--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 jobs:
   build: # this can be any name you choose
-    working_directory: 'api'
+    working_directory: ~/project/api
     docker:
       - image: node:16
     resource_class: large
