--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 jobs:
   build: # this can be any name you choose
-    working_directory: api
     docker:
       - image: node:16
     resource_class: large
@@ -10,11 +9,10 @@ jobs:
 
     steps:
       - checkout
-      - run: ls -la
       - restore_cache:
           name: Restore pnpm Package Cache
           keys:
-            - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+            - pnpm-packages-{{ checksum "api/pnpm-lock.yaml" }}
       - run:
           name: Install pnpm package manager
           command: |
@@ -22,9 +20,10 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
+            cd api
             pnpm install
       - save_cache:
           name: Save pnpm Package Cache
-          key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+          key: pnpm-packages-{{ checksum "api/pnpm-lock.yaml" }}
           paths:
-            - node_modules
+            - api/node_modules
