--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
 workflows:
     build:
       jobs:
-        - test:
+        - build:
             filters:
               branches:
                 only:
