--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,26 @@ jobs:
           key: pnpm-packages-{{ checksum "api/pnpm-lock.yaml" }}
           paths:
             - api/node_modules
+      - persist_to_workspace:
+          paths:
+            - "api"
+          root: workspace
+      
 
+  test: # this can be any name you choose
+    docker:
+      - image: node:16
+    resource_class: large
+    parallelism: 10
+
+    steps:
+      - run:
+          name: Install pnpm package manager
+          command: |
+            curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm@7
+      - run:
+          name: test app
+          command: pnpm test
 
 workflows:
     build:
@@ -37,3 +56,6 @@ workflows:
               branches:
                 only:
                   - circleci
+        - test:
+            requires:
+              - build
