--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: test app
           command: |
-            ls -la
+            cd api
             pnpm test
 
 workflows:
