--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,9 +71,7 @@ jobs:
   deploy:
     executor: heroku/default
     steps:
-      - attach_workspace:
-          # Must be absolute path or relative path from working_directory
-          at: ~/project/
+      - checkout
 
       - heroku/install
 
